# c_cli_lib

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/calculator/: main.c
include/cli/: cli.h  types.h
src/: app.c  internal.c  internal.h  parser.c
